# geovision

./: .gitignore  README.md  pyproject.toml
detector_agent/: agent.py  tools.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: ImageCanvas.tsx  ImageUpload.tsx  StatsBar.tsx
modal_inference/: client.py  inference.py
segmentation_agent/: agent.py  tools.py
supervisor/: agent.py  server.py
